Fix issue with whiskey list not wrapping properly

--- a/src/css/Bar.css
+++ b/src/css/Bar.css
@@ -130,7 +130,7 @@ div.sub-section {
     flex-wrap: wrap;
     width: 100%;
     justify-content: flex-start;
-    height: 55rem;
+    height: 75rem;
   }
 
   div.columns div.sub-section {
